# speech-emotion-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
.github/workflows/: pre-commit.yml  pytest.yml
conf/: config.yaml
conf/data/augmentations/: augmentations.yaml
conf/data/data_loading/: data_loading.yaml
conf/data/preprocessing/: preprocessing.yaml
conf/inference/: inference.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
data/: .gitignore  CREMA-D-split.dvc  CREMA-D.dvc
logs/wandb/: .gitignore
models/: .gitignore  model-epoch=60-val_loss=0.5905-val_acc=0.693.ckpt.dvc  model-epoch=78-val_loss=0.7900-val_acc=0.674.ckpt.dvc  model-epoch=90-val_loss=0.8091-val_acc=0.658.ckpt.dvc
scripts/: data_download.py  dataset_splitting.py  models_download.py  update_cls_weights.py
scripts/download/: download_data.py  download_model.py
scripts/preparation/: split_dataset.py  update_cls_weights.py
scripts/production_packaging/: convert.py  inference_pipeline.py
speech_emotion_recognition/: audio_preprocessing.py  classifier.py  data.py  inference.py  inference_data.py  model.py  predict.py  preprocessing.py  test.py  train.py
speech_emotion_recognition/core/: loss.py  model.py
speech_emotion_recognition/data/: augmentations.py  data.py  inference_data.py  preprocessing.py
speech_emotion_recognition/inference/: loading.py  preprocessing.py
speech_emotion_recognition/utils/: local_plotting.py  plotting.py
tests/: test_data_modules.py  test_imports.py  test_prediction.py
