[project]
name = "speech-emotion-recognition"
version = "0.1.0"
description = "Classifier of 1 of 6 emotions in audio segment"
authors = [
    {name = "IvanZhigalskii"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch (>=2.6.0,<3.0.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "lightning (>=2.5.0.post0,<3.0.0)",
    "hydra-core (>=1.3.2,<2.0.0)",
    "omegaconf (>=2.3.0,<3.0.0)",
    "torch-audiomentations (>=0.12.0,<0.13.0)",
    "pathlib (>=1.0.1,<2.0.0)",
    "kaggle (>=1.7.4.5,<2.0.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "wandb (>=0.19.11,<0.20.0)",
    "dvc (>=3.59.2,<4.0.0)",
    "pre-commit (>=4.2.0,<5.0.0)",
    "fire (>=0.7.0,<0.8.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.0"

[tool.isort]
profile = "black"
